stateDiagram-v2
    [*] --> todo: triage สร้างไฟล์
    todo --> preop: dev รอข้อมูลหรือผลทดสอบ
    preop --> todo: dev ได้ข้อมูล แต่ยังต้องเตรียมต่อ
    preop --> mise: dev ได้ข้อมูลและเตรียมพร้อม
    todo --> mise: dev เติมรายละเอียดครบ
    mise --> wip: เริ่มงาน — todo-next/AI
    wip --> test: งานเสร็จ จบ session — AI
    test --> wip: ไม่ผ่าน — จดเหตุผลใน Progress
    test --> done: Tester ผ่าน — todo-finish หรือบอร์ด
    todo --> done: ไม่มี ticket ผู้ใช้ประกาศจบ
    done --> [*]: sweep เก็บ archive/YYYY-MM
    note right of test
        Jira เป็น manual
        ไฟล์ไม่ mirror สถานะ Jira
    end note
